// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstrumentDiagram Multi-channel GEN2 renders correctly 1`] = `
<div>
  <img
    className="flipped_image"
    src="pipetteGEN2Multi.png"
  />
</div>
`;

exports[`InstrumentDiagram Multi-channel renders correctly 1`] = `
<div>
  <img
    className=""
    src="pipetteMulti.png"
  />
</div>
`;

exports[`InstrumentDiagram Single-channel GEN2 renders correctly 1`] = `
<div>
  <img
    className="flipped_image"
    src="pipetteGEN2Single.png"
  />
</div>
`;

exports[`InstrumentDiagram Single-channel renders correctly 1`] = `
<div>
  <img
    className=""
    src="pipetteSingle.png"
  />
</div>
`;

exports[`InstrumentGroup Renders correctly 1`] = `
<section
  className="pipette_group"
>
  <div
    className="pipette left foo"
  >
    <div
      className="pipette_info"
    >
      <div>
        <h2
          className="title"
        >
          pipette
        </h2>
        <span
          className="value"
        >
          p300 8-Channel
        </span>
      </div>
    </div>
    <div
      className="pipette_icon"
    >
      <img
        className=""
        src="pipetteMulti.png"
      />
    </div>
  </div>
  <div
    className="pipette right disabled blah"
  >
    <div
      className="pipette_info"
    >
      <div>
        <h2
          className="title"
        >
          pipette
        </h2>
        <span
          className="value"
        >
          p10 Single
        </span>
      </div>
    </div>
    <div
      className="pipette_icon"
    >
      <img
        className="flipped_image"
        src="pipetteSingle.png"
      />
    </div>
  </div>
</section>
`;
